...
    
    //injetar
    lazy var interactor:any ListRepositoriesInteractor = inject((any ListRepositoriesInteractor).self)!
        
    var repositories:[Repo] = []
    
    private lazy var repositoriesList: UITableView = {
        let view = UITableView(frame: .zero)
        view.translatesAutoresizingMaskIntoConstraints = false
        view.accessibilityIdentifier = "repositoriesList"
        return view
    }()
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setupViews()
        interactor.start(nil, with: self)
        view.accessibilityIdentifier = "ListRepositoriesUIViewController"
    }

    func setupViews(){
        setupTableView()
    }
    func setupTableView() {
...
