...
import UIKit
class ListPullRequestsViewController : BaseUIVIewController {
    
    let LIST_PULL_REQUEST_CELL_IDENTIFIER = "LIST_PULL_REQUEST_CELL_IDENTIFIER"
    
    var repo:Repo!
    var pullRequestList: [PullRequest] = []
    lazy var interactor: any ListPullRequestsInteractor = inject((any ListPullRequestsInteractor).self)!
    
    private lazy var pullRequestListTableView: UITableView = {
        let view = UITableView(frame: .zero)
        view.translatesAutoresizingMaskIntoConstraints = false
        
...
