...
        animationView.loopMode = .loop
        animationView.isHidden = true;
        animationView.accessibilityIdentifier = "errorView"
        return animationView
    }()
    
    private lazy var emptyListView: AnimationView = {
        let animationView:AnimationView = .init(name: "empty_list")
        animationView.contentMode = .scaleAspectFit
        animationView.accessibilityIdentifier = "emptyListView"
        animationView.loopMode = .loop
        animationView.isHidden = true;
        return animationView
...
